fixed landscaope to portrait issue on ios, index.html no longer has meta

--- a/style.css
+++ b/style.css
@@ -46,3 +46,13 @@ canvas {
     font-family: 'PirulenRg-Regular';
     src: url('assets/fonts/pirulen.regular.ttf');
 }
+
+@viewport{
+    zoom: 1.0;
+    width: device-width;
+}
+
+@-ms-viewport{
+    zoom: 1.0;
+    width: device-width;
+}
